syntax = "proto3";

option go_package = "github.com/hobbyfarm/gargantua/pkg/protobuf";

import "google/api/annotations.proto";
import "hobbyfarm/hobbyfarm.proto";

service ScheduledEventService {
  rpc List(Empty) returns (ScheduledEventList) {
    option(google.api.http) = {
      get: "/api/v2/scheduledevents";
    };
  }

  rpc Get(ID) returns (ScheduledEvent) {
    option(google.api.http) = {
      get: "/api/v2/scheduledevents/{ID}";
    };
  }

  rpc Create(ScheduledEvent) returns (ScheduledEvent) {
    option(google.api.http) = {
      post: "/api/v2/scheduledevents";
      body: "*";
    };
  }

  rpc Update(ScheduledEvent) returns (ScheduledEvent) {
    option(google.api.http) = {
      put: "/api/v2/scheduledevents/{Name}";
      body: "*";
    };
  }

  rpc Delete(ID) returns (Empty) {
    option(google.api.http) = {
      delete: "/api/v2/scheduledevents/{ID}";
    };
  }
}

message ScheduledEventList {
  repeated ScheduledEvent ScheduledEvents = 1;
}